--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,35 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
-plugins {
-    id 'com.android.application' version '7.1.1' apply false
-    id 'com.android.library' version '7.1.1' apply false
-    id 'org.jetbrains.kotlin.android' version '1.6.10' apply false
+buildscript {
+    ext.kotlin_version = '1.6.20-RC2'
+    repositories {
+        // Check that you have the following line (if not, add it):
+        google()
+        mavenCentral()  // Google's Maven repository
+
+    }
+    dependencies {
+        // Add this line
+        classpath 'com.google.gms:google-services:4.3.10'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+
+    }
+
 }
+//Firebase End
+
+plugins {
+    id 'com.android.application' version '7.1.0' apply false
+    id 'com.android.library' version '7.1.0' apply false
+    id 'org.jetbrains.kotlin.android' version '1.5.30' apply false
+}
+//firebase start
+allprojects {
+    repositories {
+        // Check that you have the following line (if not, add it):
+        google()  // Google's Maven repository
+    }
+}
+//Firebase End
 
 task clean(type: Delete) {
     delete rootProject.buildDir
