--- a/settings.gradle
+++ b/settings.gradle
@@ -6,11 +6,15 @@ pluginManagement {
     }
 }
 dependencyResolutionManagement {
-    repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
+//    repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
+    repositoriesMode.set(RepositoriesMode.PREFER_SETTINGS)
     repositories {
         google()
         mavenCentral()
+        maven {
+            url 'https://www.jitpack.io'
+        }
     }
 }
-rootProject.name = "Yum yum"
+rootProject.name = "Yum Yum"
 include ':app'
